# epic-food-frequency

./: .gitignore  AUTHORS  Acknowledgements  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
conf/: Makefile.am  Makefile.in  client.conf  client.conf.in  defaults.conf
dao/: QuestionaireDao.cpp
doc/: Makefile.am  Makefile.in
import/: Makefile.am  Makefile.in  baking_fats.csv  cereal_brands.csv  cereal_brands_alt.csv  cereal_types.csv  cereal_types_alt.csv  cereals.csv  fields.csv  food_nutrients.csv  foods.csv  frequencies.csv  frying_fats.csv  groups.csv  ingredients.csv  meal_foods.csv  meals.csv  milk_types.csv  milk_types_alt.csv  milks.csv  nutrients.csv  portions.csv  question_types.csv  visible_fats.csv  weights.csv
import/model/: fats.csv  food.csv  food_code  food_nutrients.csv  meal_foods.csv  portions.csv
include/: Epic.hpp  Epic_lib.hpp  Singleton.hpp
include/boost/: cstdint.hpp  get_pointer.hpp  integer_traits.hpp  limits.hpp  none.hpp  operators.hpp  static_assert.hpp  token_functions.hpp  token_iterator.hpp  version.hpp
include/client/: Application.hpp  Client.hpp  Options.hpp  ReportWriter.hpp  Version.hpp
include/cmdline/: Option.hpp  Parser.hpp
include/config/: Global.hpp  Quantity.hpp  Reader.hpp  Resource.hpp  Util.hpp
include/conversion/: Conversion.hpp
include/dao/: Cereal.hpp  CerealDAO.hpp  Food.hpp  FoodDAO.hpp  FoodNutrient.hpp  Frequency.hpp  FrequencyDAO.hpp  Meal.hpp  MealDAO.hpp  MealFood.hpp  MealFoodDAO.hpp  MealNutrient.hpp  MealNutrientDAO.hpp  Milk.hpp  MilkDAO.hpp  Nutrient.hpp  NutrientDAO.hpp  Person.hpp  PersonDAO.hpp  PersonDao.hpp  Portion.hpp  PortionDAO.hpp  Questionaire.hpp  QuestionaireDAO.hpp  Report.hpp  (+4 more)
libutility/: Makefile.am  Makefile.in  config.guess  config.sub
libutility/src/: Makefile.am  Makefile.in  SQLite3_comp.c  Utility_debug.c  Utility_errors.h  Utility_find.c  Utility_find.h  Utility_includes.h  Utility_internal.h  Utility_lib.c  Utility_p2p_comms.c  Utility_p2p_comms.h  Utility_p2p_os.c  Utility_p_vector.c  Utility_p_vector.h  Utility_pack.c  Utility_pack.h  Utility_push_buffer.c  Utility_push_buffer.h  Utility_s_vector.c  Utility_s_vector.h  Utility_state.c  Utility_state.h  Utility_state_rule.c  Utility_state_rule.h  Utility_string.h  Utility_sz_vector.c  Utility_sz_vector.h  Utility_token.c  Utility_token.h  Utility_types.h  Utility_vector.c  Utility_vector.h  libUtility-0.1.pc.in  libUtility.c  libUtility.h
scripts/: Makefile.am  Makefile.in  build-darwin.sh  build-osx.sh  build-w32.sh  build.sh  gen-header-tests.sh  release.sh  windows_config.h
sql/: Makefile.am  Makefile.in  model.sql  schema.sql
src/: Application.cpp  CerealDAO.cpp  Database.cpp  FoodDAO.cpp  FrequencyDAO.cpp  Makefile.am  Makefile.in  MealDAO.cpp  MealFoodDAO.cpp  MealNutrientDAO.cpp  MilkDAO.cpp  NutrientDAO.cpp  PersonDAO.cpp  PersonDao.cpp  PortionDAO.cpp  QuestionaireDAO.cpp  QuestionaireDao.cpp  ReportDAO.cpp  ReportWriter.cpp  WeightDAO.cpp  application.cpp  client.cpp  config.cpp  config_reader.cpp  database.cpp  fields.cpp  logger.cpp  model.cpp  questionaire.cpp  report.cpp
src/client/: Application.cpp  Application.hpp  Client.cpp  Makefile.am  Makefile.in  ReportWriter.cpp  ReportWriter.hpp
src/libdao/: CerealDAO.cpp  CerealDAO.hpp  Database.cpp  Database.hpp  FoodDAO.cpp  FoodDAO.hpp  FrequencyDAO.cpp  FrequencyDAO.hpp  Makefile.am  Makefile.in  MealDAO.cpp  MealDAO.hpp  MealFoodDAO.cpp  MealFoodDAO.hpp  MealNutrientDAO.cpp  MealNutrientDAO.hpp  MilkDAO.cpp  MilkDAO.hpp  NutrientDAO.cpp  NutrientDAO.hpp  PersonDAO.cpp  PersonDAO.hpp  PortionDAO.cpp  PortionDAO.hpp  QuestionaireDAO.cpp  QuestionaireDAO.hpp  ReportDAO.cpp  ReportDAO.hpp  Statement.hpp  WeightDAO.cpp  WeightDAO.hpp  util.c  util.h
src/libhelper/: Config.cpp  ConfigReader.cpp  Logger.cpp  Logger.hpp  Makefile.am  Makefile.in
src/libsqlite/: Makefile.am  Makefile.in  sqlite3.h
test/: Makefile.am  Makefile.in  Person.hpp  PersonDao.cpp  Questionaire.hpp  QuestionaireDao.hpp  README.txt  imp.cpp  imp.hpp  test.csv  test3.csv  test_csv.cpp  test_dao.cpp  test_dao_import.cpp  test_db.cpp  test_header.cpp  test_import.cpp  test_split.cpp  test_util_split.cpp
test/config/: Makefile.am  Makefile.in  test_config_finding.cpp  test_config_loading.cpp
test/csv/: Makefile.am  Makefile.in  test_csv_import.cpp
test/database/: Makefile.am  Makefile.in  test_database_import.cpp  test_database_report.cpp
test/database/model/: Makefile.am  Makefile.in  test_cereals.cpp  test_food.cpp  test_food_nutrient.cpp  test_frequencies.cpp  test_meal.cpp  test_meal_foods.cpp  test_nutrient.cpp  test_person.cpp  test_portions.cpp  test_questionaire.cpp  test_questionaire_person.cpp  test_weights.cpp
test/fixtures/: Makefile.am  Makefile.am~  Makefile.in  defaults.conf  quantity.conf  test.conf.in
test/fixtures/conf/: Makefile.am  Makefile.am~  Makefile.in
test/fixtures/import/: Makefile.am  Makefile.am~  Makefile.in
test/fixtures/sql/: Makefile.am  Makefile.am~  Makefile.in
test/headers/: Makefile.am  test_Epic_lib.cpp  test_Singleton.cpp  test_cmdline_Parser.cpp  test_config_Global.cpp  test_config_Reader.cpp  test_config_Resource.cpp  test_config_Util.cpp  test_conversion_Conversion.cpp  test_dao_Cereal.cpp  test_dao_Food.cpp  test_dao_FoodNutrient.cpp  test_dao_Frequency.cpp  test_dao_Meal.cpp  test_dao_MealFood.cpp  test_dao_MealNutrient.cpp  test_dao_Milk.cpp  test_dao_Nutrient.cpp  test_dao_Person.cpp  test_dao_Portion.cpp  test_dao_Questionaire.cpp  test_dao_Report.cpp  test_dao_Weight.cpp  test_dataset_Dataset.cpp  test_import_Context.cpp  test_import_Import.cpp  test_import_InsertValue.cpp  test_import_LineInfo.cpp  test_import_NewLine.cpp  test_import_Parser.cpp  test_license_GPL_License.cpp  test_pattern_TwoKeyMap.cpp
test/libcsv/: test_lib_csv.cpp
test/logger/: Makefile.am  Makefile.in  test_logger.cpp
test/split/: LineAdapter.cpp  LineAdapter.hpp  Makefile.am  Makefile.in  test_split.cpp
(+295 files in other folders)
