## Process this file with automake to produce Makefile.in
## Created by Anjuta

ACLOCAL_AMFLAGS= -I ${top_srcdir}/m4 
#
# Was ACLOCAL_AMFLAGS= -I m4 
# which caused > aclocal: couldn't open directory `m4':
#                 > when configure.in is altered/timestamp changes after running ./autogen.sh
#
SUBDIRS = libutility \
	  src \
	  test

pkgsysconfdir = $(sysconfdir)/$(PACKAGE)
pkgsysconf_DATA =

# shared application configs
confdir = ${pkgsysconfdir}/conf
conf_DATA = \
        conf/quantity.conf \
        $(top_builddir)/client.conf

$(top_builddir)/client.conf: $(top_srcdir)/conf/client.conf.in stamp-h1
	sed -e 's![@]prefix[@]!$(prefix)!g' \
	    -e 's![@]exec_prefix[@]!$(exec_prefix)!g' \
	    -e 's![@]includedir[@]!$(includedir)!g' \
	    -e 's![@]datadir[@]!$(datadir)!g' \
	    -e 's![@]confdir[@]!$(confdir)!g' \
	    -e 's![@]sqldir[@]!$(sqldir)!g' \
	    -e 's![@]importdir[@]!$(importdir)!g' \
	    -e 's![@]libdir[@]!$(libdir)!g' \
	    -e 's![@]PACKAGE_VERSION[@]!$(PACKAGE_VERSION)!g' \
	    -e 's![@]KRB5_LDFLAGS[@]!$(KRB5_LDFLAGS)!g' \
	    -e 's![@]KRB5_LIBS[@]!$(KRB5_LIBS)!g' \
	    $(top_srcdir)/conf/client.conf.in > $@

# application data imports
sqldir = ${pkgsysconfdir}/sql
sql_DATA = \
	sql/schema.sql

# application data imports
importdir = ${pkgsysconfdir}/import
import_DATA = \
	import/frequencies.csv 		\
	import/weights.csv		\
	import/portions.csv 		\
	import/meals.csv 		\
	import/foods.csv 		\
	import/nutrients.csv 		\
	import/meal_foods.csv 		\
	import/food_nutrients.csv 	\
	import/cereals.csv 		\
	import/milks.csv

# docs and LICENSE
epic_ffqdocdir  = ${prefix}/doc/epic_ffq
epic_ffqdoc_DATA = \
	README\
	COPYING\
	AUTHORS\
	ChangeLog\
	INSTALL\
	NEWS\
	Acknowledgements

EXTRA_DIST = $(epic_ffqdoc_DATA) \
	     $(conf_DATA) \
	     $(sql_DATA) \
	     $(import_DATA) \
	     $(top_srcdir)/conf/client.conf.in \
	     $(top_srcdir)/scripts/build-w32.sh \
	     $(top_srcdir)/autogen.sh

DISTCLEANFILES = $(top_builddir)/client.conf

# Remove doc directory on uninstall
uninstall-local:
	-rm -r $(epic_ffqdocdir)

####################################
# Hook to make the ChangeLog
dist-hook:
	@if test -d "$(top_srcdir)/.git" ; \
	then \
		echo Creating ChangeLog && \
		( cd "$(top_srcdir)" && \
		  echo '# Generated by Makefile. Do not edit.'; echo; \
		  ./missing --run git log --shortstat ) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
		|| ( rm -f ChangeLog.tmp ; \
		     echo Failed to generate ChangeLog >&2 ); \
	else \
		echo A git clone is required to generate a ChangeLog >&2; \
	fi
