SUBDIRS = fixtures config logger split csv database .

TESTS=	\
	split/test_split \
	\
	config/test_config_finding \
	config/test_config_loading \
	\
	csv/test_csv_pair 	\
	csv/test_csv_import	\
	\
	database/test_database_report \
	database/test_database_import	\
	\
	database/model/test_person \
	database/model/test_frequencies \
	database/model/test_questionaire \
	database/model/test_meal \
	database/model/test_food \
	database/model/test_cereals \
	database/model/test_nutrient \
	database/model/test_meal_foods \
	database/model/test_questionaire_person \
	database/model/test_weights \
	database/model/test_food_nutrient \
	database/model/test_portions
