SUBDIRS = fixtures config logger split csv database .

TESTS=	\
	split/test_split$(EXEEXT) \
	\
	config/test_config_finding$(EXEEXT) \
	config/test_config_loading$(EXEEXT) \
	\
	logger/test_logger$(EXEEXT) 	\
	\
	csv/test_csv_pair$(EXEEXT) 	\
	csv/test_csv_import$(EXEEXT) 	\
	\
	database/test_database_report$(EXEEXT) \
	database/test_database_import$(EXEEXT) \
	\
	database/model/test_person$(EXEEXT) \
	database/model/test_frequencies$(EXEEXT) \
	database/model/test_questionaire$(EXEEXT) \
	database/model/test_meal$(EXEEXT) \
	database/model/test_food$(EXEEXT) \
	database/model/test_cereals$(EXEEXT) \
	database/model/test_nutrient$(EXEEXT) \
	database/model/test_meal_foods$(EXEEXT) \
	database/model/test_questionaire_person$(EXEEXT) \
	database/model/test_weights$(EXEEXT) \
	database/model/test_food_nutrient$(EXEEXT) \
	database/model/test_portions$(EXEEXT)
